--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+
+#neat-gradient-canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1; /* Très important : place le canvas derrière tout le contenu */
+  }
+
+  body {
+    background-color: #0c0a18; /* Une couleur de repli si le JS est désactivé */
+  }
